--- a/package.json
+++ b/package.json
@@ -40,6 +40,18 @@
     ]
   },
   "devDependencies": {
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
