--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-- task: PowerShell@2
-  inputs:
-    filePath: 'pipe.ps1'
-
 trigger:
 - main
 
@@ -20,3 +12,55 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- powershell: |
+    Write-Host ' - - - - - - - - - - - - - - - - - - - - - - - - -'
+    Write-Host ' reflect Azure Devops repo changes to GitHub repo'
+    Write-Host ' - - - - - - - - - - - - - - - - - - - - - - - - - '
+
+    $stageDir = '$(Build.SourcesDirectory)' | Split-Path
+    $githubDir = $stageDir +"\"+"gitHub"
+    $destination = $githubDir +"\"+"<azure-repo-name>.git"
+    $alias = '<jpugmire>:'+ "$(Github.PAT)"
+    $sourceURL = 'https://$(AzureDevOps.PAT)@<S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith@dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master>'
+    $destURL = 'https://' + $alias + '@<github.com/jpugmire/driver-incentive-frontend.git>'
+
+    #Check if the parent directory exists and delete
+    if((Test-Path -path $githubDir))
+    {
+      Remove-Item -Path $githubDir -Recurse -force
+    }
+
+    if(!(Test-Path -path $githubDir))
+    {
+      New-Item -ItemType directory -Path $githubDir
+      Set-Location $githubDir
+      git clone --mirror $sourceURL
+    }
+    else
+    {
+      Write-Host "The given folder path $githubDir already exists";
+    }
+
+    Set-Location $destination
+
+    Write-Output '*****Git removing remote secondary****'
+    git remote rm secondary
+
+    Write-Output '*****Git remote add****'
+    git remote add --mirror=fetch secondary $destURL
+
+    Write-Output '*****Git fetch origin****'
+    git fetch $sourceURL
+
+    Write-Output '*****Git push secondary****'
+    git push secondary --all
+
+    Write-Output '**Azure Devops repo synced with Github repo**'
+    Set-Location $stageDir
+
+    if((Test-Path -path $githubDir))
+    {
+      Remove-Item -Path $githubDir -Recurse -force
+    }
+
