--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
-    $destination = $githubDir +"\"+"<azure-repo-name>.git"
+    $destination = $githubDir +"\"+"<master>.git"
     $alias = '<jpugmire>:'+ "$(Github.PAT)"
     $sourceURL = 'https://$(AzureDevOps.PAT)@<S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith@dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master>'
     $destURL = 'https://' + $alias + '@<github.com/jpugmire/driver-incentive-frontend.git>'
