--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
-    $alias = 'jpugmire:536152ea92e3054902eec72e738e4f3bf6154dc8'
+    $alias = 'jpugmire:' + $(Github.PAT)
     $sourceURL = 'https://' + ${env:AZUREDEVOPS_PAT} + 'dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
     $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
 
