--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
     echo Pass: $(Github.PAT)
-    $alias = 'jpugmire:' + $(Github.PAT)
+    $alias = 'jpugmire:536152ea92e3054902eec72e738e4f3bf6154dc8'
     $sourceURL = 'https://' + ${env:AZUREDEVOPS_PAT} + 'dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
     $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
 
