--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-- group: pipeline-vars
+- group: Pipeline Vars
 
 steps:
 - script: echo Hello, world!
