--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,9 @@ steps:
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
+    $alias = 'jpugmire:dhNRAYD99sTwm9N'
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
-    $destURL = 'https://jpugmire:6b790b0a121ebf21c22a1fe079dfae9da58a2a46@github.com/jpugmire/driver-incentive-frontend.git'
+    $destURL = 'https://' + $alias '@github.com/jpugmire/driver-incentive-frontend.git'
 
     #Check if the parent directory exists and delete
     if((Test-Path -path $githubDir))
