--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ steps:
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
-    echo PAT: $(GithubAcc.PAT)
-    $alias = 'jpugmire:' + '$(GithubAcc.PAT)'
+    echo PAT: $MAPPED_ENV_PAT
+    $alias = 'jpugmire:' + $MAPPED_ENV_PAT
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
     $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
 
@@ -64,4 +64,6 @@ steps:
     {
       Remove-Item -Path $githubDir -Recurse -force
     }
+    env:
+      MAPPED_ENV_PAT: $(GithubAcc.PAT)
 
