--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
-    Write-Output 'PAT: $MAPPED_ENV_PAT'
+    Write-Output 'PAT: ' $MAPPED_ENV_PAT
     $alias = 'jpugmire:' + $MAPPED_ENV_PAT
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
     $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
