Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ steps:
     $stageDir = '$(Build.SourcesDirectory)' | Split-Path
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
-    Write-Output 'PAT: ' $MAPPED_ENV_PAT
-    $alias = 'jpugmire:' + $MAPPED_ENV_PAT
+    Write-Host "PAT: $env:MAPPED_ENV_PAT"
+    $alias = 'jpugmire:' + $env:MAPPED_ENV_PAT
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
     $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
 
@@ -66,5 +66,5 @@ steps:
     }
 
   env:
-    MAPPED_ENV_PAT: 'TEST'
+    MAPPED_ENV_PAT: $(GithubAcc.PAT)
 
