--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,10 @@ steps:
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
     Write-Host "PAT: $env:MAPPED_ENV_PAT"
-    $alias = 'jpugmire:' + $env:MAPPED_ENV_PAT
+    git config --global user.email "jpugmire@clemson.edu"
+    git config --global user.name "jpugmire"
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
-    $destURL = 'https://' + $alias + '@github.com/jpugmire/driver-incentive-frontend.git'
+    $destURL = 'https://' + $env:MAPPED_ENV_PAT + '@github.com/jpugmire/driver-incentive-frontend.git'
 
     #Check if the parent directory exists and delete
     if((Test-Path -path $githubDir))
