--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,13 +5,15 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '10.x'
+  displayName: 'Install Node.js'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    npm install
+    npm run build
+  displayName: 'npm install and build'
 
 - powershell: |
     Write-Host ' - - - - - - - - - - - - - - - - - - - - - - - - -'
@@ -68,4 +70,5 @@ steps:
 
   env:
     MAPPED_ENV_PAT: $(GithubAcc.PAT)
+
 
