Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
     $authorUser = git log -1 --pretty=format:'%an'
-    Write-Host "Author test: $(authorUser)"
+    Write-Host "Author test: $authorUser"
     Write-Host "PAT: $env:MAPPED_ENV_PAT"
     Write-Host "User: $(Build.RequestedFor)"
     git config --global user.email "jpugmire@clemson.edu"
