--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ steps:
     $githubDir = $stageDir +"\"+"gitHub"
     $destination = $githubDir +"\"+"Master.git"
     Write-Host "Build Started By: $(Build.RequestedFor)"
-    git config --global user.email "jpugmire@clemson.edu"
-    git config --global user.name "jpugmire"
+    git config --global user.email "jtblackk@clemson.edu"
+    git config --global user.name "jtblackk"
     $sourceURL = 'https://dev.azure.com/S21-VanScoysBoys11-Black-McLendon-OReilly-Griffith/S21-VanScoysBoys11-Black.McLendon.OReilly.Griffith.Pugmire/_git/Master'
-    $destURL = 'https://' + ${env:MAPPED_ENV_PAT} + '@github.com/jpugmire/driver-incentive-frontend.git'
+    $destURL = 'https://' + ${env:MAPPED_ENV_PAT} + '@github.com/jtblackk/driver-incentive-frontend.git'
 
     #Check if the parent directory exists and delete
     if((Test-Path -path $githubDir))
