--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "aws-amplify": "^3.3.17",
+    "aws-amplify-react": "^4.2.21",
     "email-validator": "^2.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
