--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "aws-sdk": "^2.835.0",
     "email-validator": "^2.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
