--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.835.0",
     "email-validator": "^2.0.4",
     "react": "^17.0.1",
+    "react-data-grid": "^7.0.0-canary.36",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
