--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^12.6.2",
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.21",
+    "datejs": "^1.0.0-rc3",
     "email-validator": "^2.0.4",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
