--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.21",
     "datejs": "^1.0.0-rc3",
+    "ebay-node-api": "^2.8.9",
     "email-validator": "^2.0.4",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
