--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-remove-unused-vars": "^2.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1"
