--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.2",
     "aws-amplify": "^3.3.17",
     "aws-amplify-react": "^4.2.21",
+    "aws-sdk": "^2.884.0",
     "datejs": "^1.0.0-rc3",
     "ebay-node-api": "^2.8.9",
     "email-validator": "^2.0.4",
